style fix for overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -176,6 +176,9 @@ footer{
   padding:20px;
   font-size:1rem;
 }
+footer a{
+  word-break:break-all;
+}
 .sr-only{
   height:1px;
   width:1px;
